Minor Changes and Tweaks

--- a/templates/projects_intro_html/cnn_mnist_project.html
+++ b/templates/projects_intro_html/cnn_mnist_project.html
@@ -30,7 +30,7 @@
     <h5>CNN on MNIST Dataset</h5>
     <div class="h-30"></div>
   </div>
-
+<!-- Project Explanation -->
   <div class="col-md-9">
     <p>
       The Project is developed over the MNIST dataset. This dataset consists of
