Added comments for the extension

--- a/templates/projects_intro_html/cnn_mnist_project.html
+++ b/templates/projects_intro_html/cnn_mnist_project.html
@@ -1,3 +1,4 @@
+<!-- Extension of base_intro_proj.html before it-->
 {% extends "projects_intro_html/base_intro_proj.html" %} 
 
 {% block body %}
@@ -68,3 +69,4 @@
 
 {% endblock %}
   
+<!-- Extension of base_intro_proj.html after it it-->
