Added actual link to the projects from the website

--- a/templates/projects_intro_html/cnn_mnist_project.html
+++ b/templates/projects_intro_html/cnn_mnist_project.html
@@ -45,7 +45,7 @@
       then recognizes which number is it.
     </p>
 
-    <a href="http://127.0.0.1:5000/" class="a_view_live" target="_blank"
+    <a href="http://prakharjain.org/nrs/" class="a_view_live" target="_blank"
       ><em class="view_live"><b>View Live</b></em>
     </a>
     <a href="#" class="a_view_live" target="_blank"
