--- a/templates/projects_intro_html/cnn_cifar_project.html
+++ b/templates/projects_intro_html/cnn_cifar_project.html
@@ -38,7 +38,7 @@
                 and then recognizes which object is it.
             </p>
 
-            <a href="http://127.0.0.1:5000/" class="a_view_live" target="_blank"><em class="view_live"><b>View Live</b></em>
+            <a href="http://prakharjain.org/ors/" class="a_view_live" target="_blank"><em class="view_live"><b>View Live</b></em>
             </a>
             <a href="#" class="a_view_live" target="_blank"><em class="view_live"><b>View Code</b></em>
             </a>
