--- a/templates/projects_intro_html/flight_predict_proj.html
+++ b/templates/projects_intro_html/flight_predict_proj.html
@@ -36,7 +36,7 @@
                 The project is a web appplication that predicts the price on the flights.
             </p>
 
-            <a href="http://127.0.0.1:5000/" class="a_view_live" target="_blank"><em class="view_live"><b>View Live</b></em>
+            <a href="http://prakharjain.org/flight/" class="a_view_live" target="_blank"><em class="view_live"><b>View Live</b></em>
             </a>
             <a href="#" class="a_view_live" target="_blank"><em class="view_live"><b>View Code</b></em>
             </a>
